# libgtulu

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  .uncrustifyrc  CMakeLists.txt  COPYING  Jamroot  Makefile  README.rst  build-config.jam  coverage.html  coverage33.html  coverage41.html  generate_gl_headers.py  gtulu-logo.xcf  index.html  libgtulu.doxyfile  multiarch.jam  readme.rst  shader.jam  style.css
cmake/: AddSubmodule.cmake  DebianVersion.cmake  FindCXX11.cmake  FindCotire.cmake  GtuluCompiler.cmake  ParseVersion.cmake
debian/: changelog
doc/: data_group_internal.rst
include/: common.hpp  gtulu_opengl_pch.hpp
include/EGL/: egl.xml
include/GLES2/: gl2.xml
include/gtulu/: namespaces.hpp  opengl.hpp  pango_cairo.hpp  platform.hpp
include/gtulu/gil/data/: accessor.hpp
include/gtulu/interface/object/: gtulu_interface_object_buffer.hpp
include/gtulu/internal/: attribute.hpp  constants.hpp  constants_fwd.hpp  context.hpp  context_info.hpp  data.hpp  drawing.hpp  error.hpp  functions.hpp  functions_fwd.hpp  output.hpp  sampler.hpp  storage.hpp  texture_unit.hpp  texture_unit_manager.hpp  uniform.hpp
include/gtulu/internal/attribute/: attribute.hpp  attribute_buffer.hpp  attribute_vector.hpp
include/gtulu/internal/attribute/attribute_buffer/: callable.hpp  constraint.hpp  constraints.hpp
include/gtulu/internal/binding/: bind.hpp  buffer.hpp  slot.hpp
include/gtulu/internal/binding/slot/: buffer.hpp
include/gtulu/internal/data/: accessor.hpp  offset.hpp
include/gtulu/internal/format/: attribute.hpp  common.hpp  data.hpp  group.hpp  internal.hpp  numeric.hpp  output.hpp  program.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  target.hpp  texture.hpp  uniform.hpp
include/gtulu/internal/format/constraint/: attribute.hpp  common.hpp  data.hpp  group.hpp  numeric.hpp  sampler.hpp  target.hpp  uniform.hpp
include/gtulu/internal/format/constraints/: attribute.hpp  data.hpp  group.hpp  target.hpp  uniform.hpp
include/gtulu/internal/format/conversion/: attribute.hpp  common.hpp  data.hpp  dimension.hpp  group.hpp  internal.hpp  numeric.hpp  uniform.hpp
include/gtulu/internal/format/conversions/: attribute.hpp  data.hpp  dimension.hpp  group.hpp  internal.hpp  uniform.hpp  value_type.hpp
include/gtulu/internal/format/program/: dynamic.hpp  static.hpp
include/gtulu/internal/format/shader/: dynamic.hpp  static.hpp
include/gtulu/internal/format/uniform/: uniform.hpp  uniform_sampler.hpp
include/gtulu/internal/formats/: attribute.hpp  common.hpp  data.hpp  group.hpp  internal.hpp  numeric.hpp  output.hpp  program.hpp  renderbuffer.hpp  shader.hpp  target.hpp  texture.hpp  uniform.hpp
include/gtulu/internal/formats/attribute/: attribute.hpp  attribute_matrix.hpp  attribute_vector.hpp
include/gtulu/internal/formats/constraints/: attribute.hpp  data.hpp  group.hpp  numeric.hpp  target.hpp  uniform.hpp
include/gtulu/internal/formats/conversions/: attribute.hpp  data.hpp  dimension.hpp  group.hpp  internal.hpp  uniform.hpp  value_type.hpp
include/gtulu/internal/formats/output/: output.hpp  output_vector.hpp
include/gtulu/internal/formats/program/: dynamic.hpp  static.hpp
include/gtulu/internal/formats/shader/: dynamic.hpp  static.hpp
include/gtulu/internal/formats/uniform/: uniform.hpp  uniform_matrix.hpp  uniform_sampler.hpp  uniform_vector.hpp
include/gtulu/internal/object/: buffer.hpp  drawable.hpp  framebuffer.hpp  object.hpp  object_fwd.hpp  program.hpp  renderbuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp
include/gtulu/internal/object/buffer/: buffer_mode.hpp  slot.hpp  usage.hpp
include/gtulu/internal/object/framebuffer/: attacher.hpp  attachment_manager.hpp  format.hpp
include/gtulu/internal/object/program/: base.hpp
include/gtulu/internal/object/shader/: base.hpp
include/gtulu/internal/object/texture/: base.hpp  loadable.hpp  loader.hpp
include/gtulu/internal/objects/: buffer.hpp  drawable.hpp  framebuffer.hpp  object.hpp  object_fwd.hpp  program.hpp  renderbuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp
include/gtulu/internal/output/: output.hpp  output_vector.hpp
include/gtulu/internal/property/: property.hpp  texture.hpp  texture_lod.hpp
include/gtulu/internal/storage/: bind.hpp  copy.hpp  data.hpp  init.hpp  texture.hpp
include/gtulu/internal/uniform/: uniform.hpp  uniform_matrix.hpp  uniform_sampler.hpp  uniform_vector.hpp
include/gtulu/templates/: static_program_format.cpp  static_program_format.hpp
include/gtulu/utils/: array.hpp  file.hpp  logging.hpp  stl_ostream.hpp
include/meta/: constants_macros.hpp  constants_unmacros.hpp  declare_constants.hpp  define_constants.hpp  logic.hpp  type_aspects.hpp  type_traits.hpp
scripts/: .project  generate-functions  generate_gl_headers.py  header-to-xml  parse_xml.py
scripts/gentulu/: __init__.py  constant.py  declaration.py  function.py  gl3_parser.py  library.py  namespace.py  parameter.py  renamable.py  serializer.py  utils.py
scripts/parser/: __init__.py  source.py  types.py
src/: common.cpp  compile.cpp
src/gtulu/internal/: constants.cpp  drawing.cpp  error.cpp  texture_unit_manager.cpp
src/gtulu/internal/format/: attribute.cpp  output.cpp  uniform.cpp
src/gtulu/internal/format/shader/: dynamic.cpp
src/gtulu/internal/formats/: attribute.cpp  common.cpp  data.cpp  group.cpp  internal.cpp  output.cpp  program.cpp  shader.cpp  target.cpp  uniform.cpp
src/gtulu/internal/object/: object.cpp
src/gtulu/internal/objects/: buffer.cpp  framebuffer.cpp  object.cpp
src/gtulu/utils/: file.cpp
src/lib/: common.cpp
src/lib/gtulu/: pango_cairo.cpp
src/lib/gtulu/internal/: constants.cpp  context.cpp  texture_unit_manager.cpp
src/lib/gtulu/utils/: file.cpp  logging.cpp
test/: binding.cpp  client.cpp  context_switch.cpp  egl_test.cpp  pango_create_test.cpp  pango_render_test.cpp  pango_test.cpp  plot_image.cpp  print_image.cpp  property.cpp  test1.cpp  test2.cpp  test3.cpp
test/shaders/: client.fs  client.vs  plot_image.fs  plot_image.vs  print_image.fs  print_image.vs  test1.fs  test1.vs  test2.fs  test3.fs  test3.vs
(+39 files in other folders)
